--- a/app/globals.css
+++ b/app/globals.css
@@ -11,3 +11,20 @@
 ::-webkit-scrollbar {
   display: none;
 }
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
+
+body {
+  position: relative;
+}
+
+* {
+  box-sizing: border-box;
+}
